deployment_file/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-service
  template:
    metadata:
      labels:
        app: web-service
    spec:
      containers:
      - name: web-service
        image: your-username/web-service:latest
        ports:
        - containerPort: 3000
